--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.1.0",
     "react-native-svg-transformer": "^1.3.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1"
   },
